updated changelog && fixed polish translation

--- a/locale/pl/main.cfg
+++ b/locale/pl/main.cfg
@@ -1,5 +1,5 @@
 [entity-name]
-belt-balancer=Część balansera
+balancer-part=Część balansera
 
 [technology-name]
-belt-balancer=Balanser taśmociągowy
+balancer-part=Balanser taśmociągowy
